# brAIngentX

./: .gitignore  AGENT.md  README.md  install.sh  pyproject.toml
.agents/skills/: README.md
.agents/skills/agentmd_architect/: SKILL.md
.agents/skills/agentmd_python_expert/: SKILL.md
.agents/skills/pylint-qa/: SKILL.md
.github/instructions/: README.md  markdown-style.instructions.md
tests/: test_braingentx.py
